WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130474
REGRESSION(
r156316
): Scrollbar on a large document is broken
https://bugs.webkit.org/show_bug.cgi?id=130474
Summary
REGRESSION(r156316): Scrollbar on a large document is broken
Ryosuke Niwa
Reported
2014-03-19 14:15:57 PDT
Reproduction steps 1. Go to
http://www.whatwg.org/specs/web-apps/current-work/multipage/
2. Scroll all the way down to the bottom via wheel/trackpad 3. Scroll up so that the scollbar is above "Help" button via wheel/trackpad. 4. Try to drag the scrollbar. Expected result: Scrollbar moves to the direction I dragged Actual result: Scrollbar always moves downwards.
Attachments
Fixes the bug
(2.47 KB, patch)
2014-03-19 14:32 PDT
,
Ryosuke Niwa
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-03-19 14:16:39 PDT
<
rdar://problem/16371523
>
Ryosuke Niwa
Comment 2
2014-03-19 14:29:48 PDT
The problem appears that updateArrowPlacement is no longer exiting early in ToT:
http://trac.webkit.org/changeset/156316/trunk/Source/WebCore/platform/mac/ScrollbarThemeMac.mm
Since isScrollbarOverlayAPIAvailable() is always true, we should be returning there.
Ryosuke Niwa
Comment 3
2014-03-19 14:32:40 PDT
Created
attachment 227219
[details]
Fixes the bug
Ryosuke Niwa
Comment 4
2014-03-19 14:37:46 PDT
Committed
r165918
: <
http://trac.webkit.org/changeset/165918
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug