REGRESSION(r156316): Scrollbar on a large document is broken https://bugs.webkit.org/show_bug.cgi?id=130474 <rdar://problem/16371523>

Reviewed by Anders Carlsson.

The bug was caused by updateArrowPlacement() doing the work even though Scrollbar Overlay API is available.
Prior to r156316, this function exited early:
http://trac.webkit.org/browser/trunk/Source/WebCore/platform/mac/ScrollbarThemeMac.mm?rev=156315#L147

Fixed the bug by deleting updateArrowPlacement() entirely.

* platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::preferencesChanged):


Canonical link: https://commits.webkit.org/148467@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165918 268f45cc-cd09-0410-ab3c-d52691b4dbfc